--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angularfire": "^2.3.0",
     "bootstrap": "^4.0.0",
     "bootswatch": "^4.1.3",
     "core-js": "^2.4.1",
+    "firebase": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
