--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "angularfire": "^2.3.0",
+    "angularfire2": "^5.1.1",
     "bootstrap": "^4.0.0",
     "bootswatch": "^4.1.3",
     "core-js": "^2.4.1",
